# codex-desktop

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  AGENTS.md  README.md  codex-acp-event-output-final.txt  codex-acp-event-prompt-final.txt  eslint.config.js  package-lock.json  package.json  src-tauri  vite.config.ts  vitest.unit.config.ts
.storybook/: AGENTS.md  main.ts  preview.ts  vitest.setup.ts
docs/: AGENTS.md  backend-rust-coding-standards.md  codex-acp-analysis.md  codex-acp-data-display-analysis.md  codex-acp-test-response.md  codex-integration-plan.md  frontend-coding-standards.md  git-integration-plan.md  git.md  remote-servers.md  (+6 more)
src-tauri/: AGENTS.md  Cargo.toml  qml_sparse_demod_output.txt  task0_acp_smoke_output_1768205757238.txt  task0_acp_smoke_output_1768205825621.txt  task0_acp_smoke_output_1768205863546.txt  task0_acp_smoke_output_1768205912775.txt  task0_acp_smoke_output_1768205956170.txt  task0_acp_smoke_output_1768205995160.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  lib.rs  main.rs  terminal.rs
src-tauri/src/codex/: AGENTS.md  binary.rs  commands.rs  debug.rs  events.rs  mod.rs  process.rs  protocol.rs  remote_session.rs  service.rs  thoughts.rs  types.rs  unified_process.rs  util.rs
src-tauri/src/codex_dev/: config.rs  mod.rs  run.rs
src-tauri/src/git/: AGENTS.md  commands.rs  mod.rs  types.rs
src-tauri/src/mcp/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/remote/: AGENTS.md  commands.rs  mod.rs  ssh_process.rs  types.rs
src-tauri/tests/: event_profiler.rs
(+304 files in other folders)
